# esp-deck

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cfg.toml.example  esp_jpeg_bindings.h  partition-table.csv  sdkconfig.defaults  user_friendly_arch.md  user_friendly_plan.md  webusbtest.html
.cargo/: config.toml
docs/: REFACTOR_MACROPAD_VIEW.md
src/: actor.rs  config.rs  events.rs  http_client.rs  http_handlers.rs  http_server.rs  keyboard.rs  lib.rs  main.rs  mapper.rs  protocol.rs  transport.rs  ui.rs  usb_hid_client.rs
src/bsp/: hid_desc.rs  mod.rs  slint_platform.rs  time.rs  transport.rs  usb.rs  usb_desc.rs  usb_hid.rs  wifi.rs
src/ui/: mod.rs  ui.rs  window.rs
src/ui/widgets/: dynamic.rs  gatus.rs  mod.rs  server.rs  weather.rs
ui/: ButtonGridView.slint  Dashboard.slint  FooterView.slint  HeaderView.slint  LogListView.slint  NowView.slint  StatusBarView.slint  WidgetMediumSquare.slint  WidgetitemRenderer.slint  main.slint  styled_button.slint
webapp/: CHANGELOG.md  api_key_frontend_plan.md  index.html  package.json  project.md  tsconfig.app.json
webapp/src/: App.vue  keycodes.ts  main.ts  style.css
webapp/src/components/: ApiKeyManager.vue  ButtonEditModal.vue  ButtonGrid.vue  ConsumerPressEditor.vue  DelayEditor.vue  DeviceStatus.vue  FeedbackToast.vue  KeyPressEditor.vue  KeyReleaseEditor.vue  MacroEditor.vue  MouseMoveEditor.vue  MousePressEditor.vue  MouseWheelEditor.vue  SaveSettingsModal.vue  SendStringEditor.vue  SequenceEditor.vue  StringEditor.vue  UnknownEditor.vue
webapp/src/components/core/: BottomBar.vue  ConfirmChangesDialog.vue  DebugLogPanel.vue  TabNavigation.vue  TopBar.vue
webapp/src/components/dashboard/: DashboardSettingsView.vue
webapp/src/components/device-settings/: DeviceGeneralSettingsView.vue
webapp/src/components/macropad/: ButtonConfigDialog.vue  MacroPadSettingsView.vue
webapp/src/components/now/: NowSettingsView.vue
webapp/src/composables/: useDeviceApi.ts  useWidgetSettings.ts
webapp/src/layouts/: DefaultLayout.vue
webapp/src/router/: index.ts
webapp/src/services/: deviceService.ts
webapp/src/stores/: deviceSettingsStore.ts  deviceStore.ts  macroPadConfigStore.ts  uiStore.ts  widgetSettingsStore.ts
webapp/src/types/: deviceConfig.ts  protocol.ts
webapp/src/views/: DashboardView.vue  EditMacroView.vue  MacroPad.vue  MainView.vue  SettingsView.vue
webapp/src/views/tab-views/: DeviceSettingsView.vue  NowView.vue  StatusView.vue
webappv1/: CHANGELOG.md  index.html  package.json
webappv1/src/: App.vue  keycodes.ts
webappv1/src/components/: ButtonGrid.vue  FeedbackToast.vue  KeyReleaseEditor.vue  MacroEditor.vue  SaveSettingsModal.vue
webappv1/src/router/: index.ts
