[package]
name = "esp-deck"
version = "0.1.0"
authors = ["Shantanu Goel <shantanu.goel@gmail.com>"]
edition = "2021"
resolver = "2"

[[bin]]
name = "esp-deck"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = {version = "0.28", default-features = false }
slint = { version = "1.11", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
gt911 = "0.3"
anyhow = "1"
toml-cfg = "0.2"
chrono = {version = "0.4", default-features = false, features = ["std"]}
keycode = "1"

[build-dependencies]
embuild = "0.33"
slint-build = { version = "1.11", features=["sdf-fonts"] }

[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "bindings.h"
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/tinyusb", version = "^0.18.0~2" }
bindings_header = "tusb_bindings.h"
bindings_module = "tinyusb"
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_tinyusb", version = "^1.7.4" }
bindings_header = "tusb_bindings.h"
bindings_module = "esptinyusb"
