[package]
name = "esp-deck"
version = "0.1.0"
authors = ["Shantanu Goel <shantanu.goel@gmail.com>"]
edition = "2021"
resolver = "2"

[[bin]]
name = "esp-deck"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4", default-features = false }
# `experimental` is needed for littlefs. Using git version instead of 0.51.0 crate because of Bug #570 fix
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", rev = "b457f89a7e1727c42acd5ddeaf98794d8e298c22", features = ["critical-section", "embassy-time-driver", "embassy-sync", "experimental"] }
embedded-svc = {version = "0.28", default-features = false }
slint = { version = "1.11", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
gt911 = "0.3"
anyhow = "1"
chrono = {version = "0.4", default-features = false, features = ["std"]}
keycode = "1"
serde = "1"
serde_json = "1"
thiserror = "2"
zune-jpeg = {version = " 0.4", default-features = false, features = []}

[build-dependencies]
embuild = "0.33"
slint-build = { version = "1.11", features=["sdf-fonts"] }

[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "bindings.h"
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/tinyusb", version = "^0.18.0~2" }
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_tinyusb", version = "^1.7.4" }
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "joltwallet/littlefs", version = "^1.19.2" }
[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "esp_jpeg_bindings.h"
remote_component = { name = "espressif/esp_jpeg", version = "^1.3.0" }
